# task2.8_greedy_algorithm

./: CMakeLists.txt  README.md
max_sum/: CMakeLists.txt  max_sum_in_matrix_library.cpp  max_sum_in_matrix_library.hpp
max_sum/tests/: CMakeLists.txt  tests.cpp
